[project]
name = "openpiv-python-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "opencv-python-headless>=4.12.0.88",
    "openpiv>=0.25.1",
    "pivpy>=0.0.20",
    "pytube>=15.0.0",
    "watermark>=2.5.0",
    "yt-dlp>=2025.6.30",
]
